force-app/zurich-base/main/default/objects/GenerateScopeEvent__e/GenerateScopeEvent__e.object-meta.xml
<CustomObject>
    <label>Generate Scope Event</label>
    <pluralLabel>Generate Scope Events</pluralLabel>
</CustomObject>