force-app/zurich-base/main/default/objects/GenerateScopeEvent__e/fields/HandleType__c.field-meta.xml
<CustomField>
    <fullName>HandleType__c</fullName>
    <description>Is a helper field to tell the handleEvent method who to process the event.</description>
    <label>HandleType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>