force-app/zurich-base/main/default/objects/GenerateScopeEvent__e/fields/ReferenceFieldName__c.field-meta.xml
<CustomField>
    <fullName>ReferenceFieldName__c</fullName>
    <description>The name of the field in the referenced Parent object. For example for Claim__c to get the scope from Policy__c the field is Scope__c</description>
    <label>ReferenceFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>