force-app/zurich-base/main/default/objects/GenerateScopeEvent__e/fields/ReferenceObjectName__c.field-meta.xml
<CustomField>
    <fullName>ReferenceObjectName__c</fullName>
    <description>The name of the Parent object reference to get the information from. For example for Claim__c is Policy__c</description>
    <label>ReferenceObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>