force-app/zurich-base/main/default/objects/GenerateScopeEvent__e/fields/RelatedFieldName__c.field-meta.xml
<CustomField>
    <fullName>RelatedFieldName__c</fullName>
    <description>The name of the Field in the Object to put the information into. For example for Claim__c is Scope__c</description>
    <label>RelatedFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>